--- a/frontend/templates/constelaciones.html
+++ b/frontend/templates/constelaciones.html
@@ -48,17 +48,12 @@
                     <p>El trabajo se procesa a nivel energético y emocional. Esta nueva realidad energética 
                         genera una realineación que te permitirá transitar desde un lugar sano y manifestar 
                         de manera tangible cambios en tu vida, muchas veces de forma inmediata o inesperados.</p>
-                    
-                </div>
-                
-                <div class="agenda-card text-left">                    
-                    
-                    <p><strong>Desde el amor y el respeto te invitamos a transformar tu vida…</strong></p>
-                    
-                    <br>
-                    <p><strong>Intercambio: </strong>$ 1.600</p>
+                        <br>
+
+                        <p><strong>Desde el amor y el respeto te invitamos a transformar tu vida</strong></p>
                     
                 </div>                
+                             
                 
             </div>
             
