--- a/frontend/templates/reiki.html
+++ b/frontend/templates/reiki.html
@@ -34,9 +34,8 @@
                     <p>La sesión de reiki tiene una duración entre 45-60 minutos 
                         donde el reikista a través de la imposición de manos canaliza la energía universal, 
                         armonizando la energía del paciente.</p>
-                    <br>
-                        
-                    <p><strong>Intercambio:</strong> $800</p>
+                    <br>                       
+                    
                     
                 </div> 
 
@@ -57,14 +56,17 @@
                     <p>• Iniciación</p>
                     <p>• Práctica</p>
                     <br>
-                    <p><strong>Intercambio:</strong> $4.500</p>
+
+                    <p><strong>Ubicación:</strong></p>
+                    <p>Montevideo-Maldonado</p>
+                    
 
                     <br>
                     <p><strong>Incluye:</strong></p>
                     <p>• Manual teórico</p>
                     <p>• Certificado de asistencia</p>
-                    <br>
-                    <p><strong>Montevideo-Maldonado</strong></p>
+                
+                    
                 </div>     
             </div>
         </div>
