--- a/frontend/templates/terapia_floral.html
+++ b/frontend/templates/terapia_floral.html
@@ -24,26 +24,23 @@
     <section id="clases-yoga" class="container-clases-yoga">
         <div class="container">
             <h2 class="section-title">Terapia floral</h2>
-            <p class="section-subtitle">Las Esencias Áureas son remedios vibracionales, trabajan sobre 
-                nuestros campos electromagnéticos. Si bien pueden relacionarse con las esencias florales 
-                convencionales, se diferencian por su rango y direccionalidad energética. Dicha diferencia 
-                tiene su origen, fundamentalmente en los procesos de elaboración, ya que en ellos se 
-                sintetizan tanto protocolos florales convencionales, como protocolos alquímicos. 
-                Estos últimos les confieren una resonancia o vibración especial que denominaremos “áurea”.
-                Como fruto de esta síntesis de elaboración y de esta nueva resonancia, se obtiene una 
-                acción más profunda, amplia y eficaz, que posibilita excelentes resultados con un número 
-                reducido de elementos. Son extraordinariamente eficaces en liberar y aliviar, 
-                simultáneamente, los bloqueos emocionales y las consecuencias asociadas a dichos bloqueos.
+            <p class="section-subtitle">Las Esencias Áureas son remedios vibracionales que actúan directamente 
+                sobre nuestros campos energéticos, ayudando a restablecer el equilibrio emocional y energético. 
+                Aunque están relacionadas con las esencias florales tradicionales, se diferencian por su 
+                potencia y dirección energética, resultado de un proceso único de elaboración que combina 
+                protocolos florales y alquímicos.
+                Esta fusión especial genera una vibración “áurea” que amplifica su efectividad, 
+                permitiendo liberar bloqueos emocionales profundos y aliviar las consecuencias 
+                asociadas con ellos, con solo unas pocas esencias.
                 </p>
             
             <div class="agenda-grid">
-                <div class="agenda-card">
+                <div class="agenda-card text-left">
                     
                     <h3>¿Qué incluye?</h3>                    
-                    <p>• Entrevista </p>
-                    <p>• Homeopatía 30 o 55ml (terapia floral)</p>
-                    <br>
-                    <p><strong>Costo:</strong> $1000</p>                    
+                    <p>• Entrevista personalizada para conocer tu estado emocional y energético. </p>
+                    <p>• Preparación y entrega de tu fórmula personalizada de Esencias Áureas en presentación homeopática (30 o 55 ml).</p>
+                                      
 
                 </div>      
                 
