--- a/frontend/templates/yoga.html
+++ b/frontend/templates/yoga.html
@@ -39,7 +39,8 @@
                         <i class="fas fa-circle-dot"></i>
                     </div>
                     <h3>Modalidad</h3>
-                    <p>Presencial</p>
+                    <p>Presencial u online personalizada</p>
+                    <p>Grupos reducidos</p>
                     <p>Principiantes - intermedio</p>
 
                 </div>
@@ -50,6 +51,7 @@
                     </div>
                     <h3>Ubicación</h3>
                     <p>Reducto - Montevideo</p>
+                    <p>Maldonado (consulte)</p>
                 </div>
                 
                 <div class="agenda-card">
@@ -57,6 +59,7 @@
                         <i class="fas fa-calendar-days"></i>
                     </div>
                     <h3>Horarios</h3>
+                    <p><strong>Montevideo:</strong></p>
                     <p>Martes: 7hs y 16hs</p>
                     <p>Miércoles: 16hs</p>
                 </div>
