--- a/frontend/templates/yoga_gong.html
+++ b/frontend/templates/yoga_gong.html
@@ -35,14 +35,17 @@
                 equilibrio energético.</p>
             
             <div class="agenda-grid">
-                <div class="agenda-card">                    
-                    <h3>Duración y periodicidad</h3>
-                    <p>Eventos mensuales o en fechas especiales de 2 horas de duración.</p>
-                    <p>También pueden organizarse como experiencias privadas para grupos, cumpleaños conscientes, despedidas, etc.</p>
+                <div class="agenda-card text-left">                    
+                    <h3>Duración y frecuencia</h3>
+                    <p>Eventos mensuales o en fechas especiales de <strong>2 horas</strong> de duración.</p>
+                    <br>
+                    <p>Estas experiencias también están disponibles para grupos privados que deseen 
+                        compartir un momento de conexión y bienestar en un entorno diferente. 
+                        Ej. evento laboral, cumpleaños, etc</p>
 
                 </div>
                 
-                <div class="agenda-card ">                    
+                <div class="agenda-card text-left">                    
                     <h3>¿Qué es un baño de Gong?</h3>
                     <p>El baño de gong es una inmersión sonora en la que te recuestas 
                         cómodamente y simplemente recibís las vibraciones del gong. 
@@ -51,7 +54,7 @@
                         sistema nervioso, el cerebro y el cuerpo energético.</p>
                 </div>
                 
-                <div class="agenda-card">                    
+                <div class="agenda-card text-left">                    
                     <h3>¿Cómo actúa en el cuerpo energético?</h3>
                     <p>Ayuda a liberar tensiones profundas, limpiar emociones y 
                         acceder a estados meditativos sin esfuerzo.</p>                    
@@ -67,16 +70,10 @@
                     <p>•Potencia la meditación y la creatividad</p>
                 </div>
     
-                <div class="agenda-card text-left">
-                    <h3>¿Qué incluye?</h3>
-                    <p>•Clase de Hatha Yoga guiada</p>
-                    <p>•Sesión completa de baño de gong</p>                    
-                    <p>•Colchoneta (yoga mat), mantas y elementos disponibles (opcional: cada participante puede traer lo suyo)</p>
-                      
-                </div>
-    
+                    
                 <div class="agenda-card text-left">
                     <h3>¿Qué llevar?</h3>
+                    <p>•Yoga mat (colchoneta)</p>
                     <p>•Ropa cómoda</p>
                     <p>•Manta personal (opcional)</p>
                     <p>•Bloques y/o cinturón (opcional)</p>
