fix yoga-gong button

--- a/frontend/templates/yoga_gong.html
+++ b/frontend/templates/yoga_gong.html
@@ -85,7 +85,7 @@
             <div class="yoga-subcontainer">
 
                 <div class="agenda-cta">
-                    <a href="/eventos-disponibles?categoria=Yoga%20presencial" class="btn btn-primary btn-large">Ver próximos eventos</a>
+                    <a href="/eventos-disponibles?categoria=Yoga" class="btn btn-primary btn-large">Ver próximos eventos</a>
                 </div>
 
 
