--- a/frontend/templates/partials/footer.html
+++ b/frontend/templates/partials/footer.html
@@ -12,7 +12,7 @@
                     <li ><a href="/alimentacion">Alimentación</a></li>
                     <li><a href="/yoga">Yoga</a></li>
                     <li><a href="/yoga-gong">Yoga y Gong</a></li>
-                    <li><a href="/reiki">Reiki</a></li>
+                    <li><a href="/reiki-sesion">Sesión de Reiki</a></li>
                     <li><a href="/terapia-floral">Terapia Floral</a></li>
                     <li><a href="/eventos-disponibles">Próximos eventos</a></li>
                 </ul>
