--- a/frontend/templates/partials/header.html
+++ b/frontend/templates/partials/header.html
@@ -36,7 +36,7 @@
                     <li class="has-submenu">
                         <a href="#">Terapias <span class="submenu-arrow"> > </span></a>
                         <ul class="submenu">
-                            <li><a href="/reiki">Reiki</a></li>
+                            <li><a href="/reiki-sesion">Sesión de Reiki</a></li>
                             <li><a href="/pendulo-hebreo">Péndulo hebreo</a></li>
                             <li><a href="/terapia-floral">Terapia floral</a></li>
                             <li><a href="/constelaciones">Constelaciones</a></li>
