--- a/frontend/templates/reiki_sesion.html
+++ b/frontend/templates/reiki_sesion.html
@@ -15,59 +15,33 @@
     <!-- Sección de Presentación -->
     <section id="presentacion-alimentacion" class="container-reiki">
         <div class="container-yoga-content">
-            <h2 class="yoga-title">Reiki</h2>
-            <p class="yoga-subtitle">Reiki es una técnica Japonesa ancestral de sanación. 
-                La energía se transmite por la imposición de las manos del reikista sobre sí 
-                mismo u otra persona, animal o planta.</p>
+            <h2 class="yoga-title">Sesión de Reiki</h2>
+            <p class="yoga-subtitle"></p>
                       
         </div>
     </section>
 
-    <section id="clases-yoga" class="container-clases-yoga">
-        <div class="container">
-            
-            
-            <div class="agenda-grid">
-                <div class="agenda-card text-left">
-                    
-                    <h3>Sesión de Reiki</h3>                    
-                    <p>La sesión de reiki tiene una duración entre 45-60 minutos 
-                        donde el reikista a través de la imposición de manos canaliza la energía universal, 
-                        armonizando la energía del paciente.</p>
-                    <br>                       
-                    
-                    
-                </div> 
-
-                <div class="agenda-card text-left">
-                    
-                    <h3>Iniciación en Reiki - Nivel 1</h3>
-                    <p>En este primer nivel se recibe la activación de la energía en un acto denominado 
-                        Iniciación.</p>
-                    <br>
-
-                    <p><strong>Programa:</strong></p>
-                    <p>• Historia del Reiki</p>                    
-                    <p>• Conceptos básicos</p>
-                    <p>• Principios del Reiki</p>
-                    <p>• Sistema de Chakras, sus funciones y características</p>
-                    <p>• Tratamiento (como realizarlo)</p>
-                    <p>• Meditación</p>
-                    <p>• Iniciación</p>
-                    <p>• Práctica</p>
-                    <br>
-
-                    <p><strong>Ubicación:</strong></p>
-                    <p>Montevideo-Maldonado</p>
-                    
+    <section id="sesion-reiki" class="container-clases-yoga">
+        <div class="container-img-txt">
+            <div class="container-img-secondary">
+                <img class="img-secondary" src="/static/img/img-reiki-2.jpg" alt="Reiki">
+            </div>
+            <div class="container-txt-secondary">
+                    <p class="about-txt"><i class="fa-solid fa-circle-info"></i> Sesión de Reiki</p>   
+                    <h3 class="info-titulo">Equilibra tu <span class="color-resaltado">energía</span> y armoniza tu <span class="color-resaltado">bienestar</span>.</h3>
+                    <br>                    
+                    <p class="info-texto">Disfruta de una sesión de Reiki de 45 a 60 minutos donde, 
+                        a través de la imposición de manos, canalizo la energía universal 
+                        para armonizar tu cuerpo y mente.</p>
+                        <p>Es un momento de relajación profunda 
+                        que ayuda a reducir el estrés, mejorar tu energía y promover tu bienestar integral.</p>
+                        <br>
+                        <p>¿Listo para sentirte renovado y en equilibrio?</p>
 
                     <br>
-                    <p><strong>Incluye:</strong></p>
-                    <p>• Manual teórico</p>
-                    <p>• Certificado de asistencia</p>
-                
-                    
-                </div>     
+                    <div class="info-elements">
+                        <a href="/eventos-disponibles?categoria=Terapias" class="btn btn-info">Ver fechas disponibles</a>
+                    </div>
             </div>
         </div>
     </section>
@@ -121,7 +95,7 @@
                     </div>
                     <div class="form-group">
                         <select name="servicio" required>                            
-                            <option value="reiki">Reiki</option>                            
+                            <option value="sesion-reiki">Sesión de Reiki</option>                            
                         </select>
                     </div>
                     <div class="form-group">
