--- a/frontend/static/styles.css
+++ b/frontend/static/styles.css
@@ -1,4 +1,12 @@
 /* Reset y estilos base */
+:root {
+    --dark-green-color: #23322d; /* Color oscuro */
+    --main-green-color: #4a7c59; /* Color verde principal */
+    --pale-color: #886b55; /* Color neutro */
+    --orange-color: #93571e; /* Color de contraste */
+    --lightcolor: #fdd8a7; /* Color claro */
+  }
+
 * {
     margin: 0;
     padding: 0;
@@ -323,6 +331,13 @@ transform: rotate(90deg);
     width: 100%;
 }
 
+.btn-info{
+    max-width: 400px;
+    background-color: var(--main-green-color);
+    border-radius: 10px;
+    color:white;
+}
+
 .btn-registro-container{
     align-items: center;
     text-align: center;
@@ -395,6 +410,39 @@ transform: rotate(90deg);
 
 .filtro-select {
     display: none;
+}
+
+.color-resaltado{
+    color:var(--orange-color);
+}
+
+.container-img-txt {
+    display: grid;
+    max-width: 1000px;
+    grid-template-columns: 1fr 2fr;
+    gap: 60px;
+    
+    margin: auto;
+    margin-bottom: 50px;
+    padding: 10px;
+}
+
+.container-img-secondary {
+    overflow: hidden;
+    aspect-ratio: 1 / 1;
+    border-radius: 25px;
+    
+    box-shadow: 2px 10px 30px rgba(0, 0, 0, 0.5);
+}
+
+.container-txt-secondary {
+    color:var(--dark-green-color);
+    
+}
+
+.container-txt-secondary .about-txt{
+    color:var(--main-green-color);
+    font-size: small;
 }
 
 .container-yoga{
@@ -668,7 +716,7 @@ transform: rotate(90deg);
 }
 
 .yoga-title{
-    color:#000000;
+    color:var(--dark-green-color);
     font-size: 3rem;
 
 }
@@ -960,11 +1008,34 @@ transform: rotate(90deg);
     color: #4a7c59;
 }
 
+.img-secondary{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 25px;
+    
+}
+
 .img-reserva-confirmada{
     height: 4.2em;
     align-items: center;
 
 }
+
+.info-titulo{
+    font-size:x-large;
+}
+
+.info-texto{
+    font-size:medium;
+}
+
+.info-elements{
+    display: block;
+
+}
+
+
 
 .logo-img {
     height: 2.2em; /* Ajusta este valor si es necesario para igualar el h1 */
@@ -1304,6 +1375,13 @@ transform: rotate(90deg);
 }
 
 @media (max-width: 480px) {
+
+    .container-img-txt {
+        
+        grid-template-columns: 1fr;
+        
+    }
+
     .header-container {
         padding: 0 15px;
     }
