--- a/frontend/templates/admin_eventos.html
+++ b/frontend/templates/admin_eventos.html
@@ -53,6 +53,10 @@
                                 <a href="/admin/eventos/{{ evento.id }}/editar" class="btn-editar" title="Editar">
                                     <i class="fas fa-edit"></i>
                                 </a>
+
+                                <a href="/admin/eventos/{{ evento.id }}/clonar" class="btn-clonar" title="Clonar">
+                                    <i class="fa-solid fa-clone"></i>
+                                </a>
                             
                                 <!-- Ver reservas (ícono de ojo) -->
                                 <a href="/admin/eventos/{{ evento.id }}/reservas" class="btn-ver-reservas" title="Ver reservas">
