refactor contact form

--- a/frontend/templates/terapia_floral.html
+++ b/frontend/templates/terapia_floral.html
@@ -42,16 +42,10 @@
                     <p>• Preparación y entrega de tu fórmula personalizada de Esencias Áureas en presentación homeopática (30 o 55 ml).</p>
                                       
 
-                </div>      
-                
+                </div>   
             </div>
-            
-            
-           
         </div>
     </section>
-    
-    
 
     <!-- Sección de Contacto -->
     <section id="contacto" class="contact">
@@ -82,10 +76,6 @@
                             <p>+598 99 971 075</p>
                         </div>
                     </div>
-                    
-                    
-                    
-                    
                 </div>
                 
                 <form id="contact-form">
@@ -99,7 +89,7 @@
                         <input type="tel" name="telefono" placeholder="Teléfono">
                     </div>
                     <div class="form-group">
-                        <select name="servicio" required>                            
+                        <select name="asunto" required>                            
                             <option value="terapia-floral">Terapia floral</option>                            
                         </select>
                     </div>
