--- a/frontend/templates/yoga_gong.html
+++ b/frontend/templates/yoga_gong.html
@@ -87,11 +87,7 @@
                 <div class="agenda-cta">
                     <a href="/eventos-disponibles?categoria=Yoga" class="btn btn-primary btn-large">Ver próximos eventos</a>
                 </div>
-
-
             </div>
-            
-           
         </div>
     </section>
 
@@ -126,10 +122,6 @@
                             <p>+598 99 971 075</p>
                         </div>
                     </div>
-                    
-                    
-                    
-                    
                 </div>
                 
                 <form id="contact-form">
@@ -143,7 +135,7 @@
                         <input type="tel" name="telefono" placeholder="Teléfono">
                     </div>
                     <div class="form-group">
-                        <select name="servicio" required>                            
+                        <select name="asunto" required>                            
                             <option value="yoga-gong">Yoga y Gong</option>                            
                         </select>
                     </div>
