--- a/frontend/templates/alimentacion.html
+++ b/frontend/templates/alimentacion.html
@@ -149,7 +149,7 @@
                         <input type="tel" name="telefono" placeholder="Teléfono">
                     </div>
                     <div class="form-group">
-                        <select name="servicio" required>                            
+                        <select name="asunto" required>                            
                             <option value="alimentacion">Alimentación</option>                            
                         </select>
                     </div>
