--- a/frontend/templates/constelaciones.html
+++ b/frontend/templates/constelaciones.html
@@ -110,7 +110,7 @@
                         <input type="tel" name="telefono" placeholder="Teléfono">
                     </div>
                     <div class="form-group">
-                        <select name="servicio" required>                            
+                        <select name="asunto" required>                            
                             <option value="constelaciones">Constelaciones</option>                            
                         </select>
                     </div>
