--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -138,15 +138,7 @@
                         <input type="tel" name="telefono" placeholder="Teléfono">
                     </div>
                     <div class="form-group">
-                        <select name="servicio" required>
-                            <option value="">Selecciona un servicio</option>
-                            <option value="plan-alimentacion">Plan de alimentación</option>
-                            <option value="antropometria">Antropometría</option>
-                            <option value="yoga">Clases de Yoga online</option>
-                            <option value="reiki">Reiki</option>
-                            <option value="terapia-floral">Terapia Floral</option>
-                            <option value="constelaciones">Constelaciones</option>
-                        </select>
+                        <input type="text" name="asunto" placeholder="Asunto" required class="form-control">
                     </div>
                     <div class="form-group">
                         <textarea name="mensaje" placeholder="Mensaje" rows="5"></textarea>
