--- a/frontend/templates/pendulo_hebreo.html
+++ b/frontend/templates/pendulo_hebreo.html
@@ -137,7 +137,7 @@
                         <input type="tel" name="telefono" placeholder="Teléfono">
                     </div>
                     <div class="form-group">
-                        <select name="servicio" required>                            
+                        <select name="asunto" required>                            
                             <option value="pendulo-hebreo">Péndulo hebreo</option>                            
                         </select>
                     </div>
