--- a/frontend/templates/reiki_sesion.html
+++ b/frontend/templates/reiki_sesion.html
@@ -77,10 +77,6 @@
                             <p>+598 99 971 075</p>
                         </div>
                     </div>
-                    
-                    
-                    
-                    
                 </div>
                 
                 <form id="contact-form">
@@ -94,7 +90,7 @@
                         <input type="tel" name="telefono" placeholder="Teléfono">
                     </div>
                     <div class="form-group">
-                        <select name="servicio" required>                            
+                        <select name="asunto" required>                            
                             <option value="sesion-reiki">Sesión de Reiki</option>                            
                         </select>
                     </div>
