--- a/frontend/templates/yoga.html
+++ b/frontend/templates/yoga.html
@@ -81,9 +81,8 @@
                 </div>
                 
             </div>
+
             <div class="yoga-subcontainer">
-
-
             </div>
             
            
@@ -119,10 +118,6 @@
                             <p>+598 99 971 075</p>
                         </div>
                     </div>
-                    
-                    
-                    
-                    
                 </div>
                 
                 <form id="contact-form">
@@ -136,7 +131,7 @@
                         <input type="tel" name="telefono" placeholder="Teléfono">
                     </div>
                     <div class="form-group">
-                        <select name="servicio" required>                            
+                        <select name="asunto" required>                            
                             <option value="yoga">Clases de Yoga</option>                            
                         </select>
                     </div>
