--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -141,7 +141,7 @@
                         <input type="text" name="asunto" placeholder="Asunto" required class="form-control">
                     </div>
                     <div class="form-group">
-                        <textarea name="mensaje" placeholder="Mensaje" rows="5"></textarea>
+                        <textarea name="mensaje" placeholder="Mensaje" required rows="5"></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary btn-full">Enviar Mensaje</button>
                 </form>
