--- a/frontend/templates/pendulo_hebreo.html
+++ b/frontend/templates/pendulo_hebreo.html
@@ -142,7 +142,7 @@
                         </select>
                     </div>
                     <div class="form-group">
-                        <textarea name="mensaje" placeholder="Mensaje" rows="5"></textarea>
+                        <textarea name="mensaje" placeholder="Mensaje" required rows="5"></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary btn-full">Enviar Mensaje</button>
                 </form>
