refactor presentation text

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -18,18 +18,39 @@
             <div class="hero-content">
                 <img class="santolina-img" src="/static/img/foto_santolina.png" alt="Santolina">
                 <div class="hero-content-text">
-                    <h1 class="hero-title">Bienvenida!</h1>
+                    <!--<h1 class="hero-title">Bienvenida!</h1>-->
                     <p class="hero-subtitle">
-                        Mi nombre es Danae. En este espacio busco acercar a vos todas las herramientas que he transitado y adquirido en muchos años. Herramientas que me han acercado a mí, que me han sanado en mente, cuerpo y alma.
+                        Mi nombre es Danae. Me alegra muchísimo que estés acá.
+                        <br>
+                        <br>
+                        Este espacio nace del deseo de compartir con vos todas las herramientas que he 
+                        aprendido y experimentado a lo largo de los años. Herramientas que me han guiado 
+                        en mi propio camino de sanación, ayudándome a reconectar con mi cuerpo, 
+                        mi mente y mi alma.
                         <span id="dots">...</span>
                         <span id="more" style="display:none;">  
                             <br>  
                             <br>                    
-                            Es mucho el camino recorrido y muchas veces no ha sido fácil. Lo importante es no dejar de intentarlo, disfrutar del proceso y ser amorosos con nosotros mismos. En este sitio vas a encontrar una diversidad de cursos y terapias de diferentes temas que, en un comienzo, te puede parecer que no tiene nada que ver, pero en la medida que te vayas acercando, te comparto como llegue hasta acá, como puedo unir todas estas temáticas y por momentos es sencillo responderlo: la sanación es contemplándonos como parte del todo tomando cada vez más contacto con nuestro interior y exterior, y dejar de mirar todo por separado.
-                            Espero que encuentres el camino que estás buscando y poder acompañarte en él.
+                            El camino no siempre fue fácil. Hubo momentos de duda, de pausa, de volver a 
+                            empezar… Pero aprendí que lo importante es seguir intentándolo, disfrutar del 
+                            proceso y, sobre todo, tratarnos con amor y paciencia.
+                            <br>
+                            <br>
+                            En esta página vas a encontrar una variedad de propuestas que incluyen 
+                            alimentación consciente, clases de yoga, terapias y cosmética natural. 
+                            Puede que, al principio, parezcan caminos distintos, pero todo se une cuando 
+                            empezamos a vernos como un todo. La sanación es integral. Es volver a mirarnos 
+                            con profundidad, conectarnos con lo que somos y también con lo que nos rodea.
+                            <br>
+                            <br>
+                            Espero que las propuestas resuenen con vos, que te inspire, que te acerque 
+                            a ese bienestar que estás buscando y poder acompañarte en el proceso.
+                            <br>
+                            <br> 
                             Gracias por estar acá.
-                            Con mucho cariño.
-                            Danae
+                            Con mucho cariño,<br>
+                            <br>
+                            <strong>Danae</strong>
                         </span>
                     </p>
                     <div class="hero-firma">
@@ -38,11 +59,6 @@
                     <a href="#" id="readMoreBtn" class="btn btn-secondary" style="font-size:0.9rem;">Leer más...</a>
                 </div>
             </div>
-            <!--<div class="hero-image">
-                <div class="hero-placeholder">
-                    <i class="fas fa-leaf"></i>
-                </div>
-            </div>-->
         </div>
     </section>
 
