--- a/frontend/templates/error_admin.html
+++ b/frontend/templates/error_admin.html
@@ -9,7 +9,7 @@
     <div class="container mt-5 text-center">
         <h3 class="text-danger">Error</h3>
         <p>{{ mensaje }}</p>
-        <a href="/admin/eventos" class="btn btn-primary">Volver al panel</a>
+        <a href="{{ url_volver or '/admin' }}" class="btn btn-primary">Volver</a>
     </div>
 </body>
 </html>
